--- a/noticia.html
+++ b/noticia.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senai</title>
-
-
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <main>
-        <div class="parte-de-cima">
-            
-            <input list="noticias" placeholder="Digite aki">
-            <button type="submit">🔍</button>
-
-            <datalist id="noticias">
-                <option value="noticia1">Data do artigo.</option>
-                <option value="noticia2">Notícia 2</option>
-                <option value="noticia3">Título do artigo</option>
-                <option value="noticia4"></option>
-                </datalist>
-            <a href="#">blog</a>
-        </div>
-
-    </main>
+    ADO ADO ADO QUEM LEU DEU O RABO
 </body>
 </html>
