--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="header-contente">
-        <h1>SENAI</h1>
+        <h1> <a href="index.html">SENAI</a></h1>
           <nav>
             <ul>
               <li><a href="noticia.html">Blog</a></li>
@@ -32,7 +32,7 @@
             <article class="article-card">
                 <div class="article-header">
                     <span class="data">19 de ago, 2025</span>
-                    <button class="likebutton">👍</button>
+                    <button class="like-button">👍</button>
                 </div>
 
                 <a href="noticia.html">
@@ -48,7 +48,7 @@
             <article class="article-card">
                 <div class="article-header">
                     <span class="data">19 de ago, 2025</span>
-                    <button class="likebutton">👍</button>
+                    <button class="like-button">👍</button>
                 </div>
 
                 <a href="noticia.html">
@@ -64,7 +64,7 @@
             <article class="article-card">
                 <div class="article-header">
                     <span class="data">19 de ago, 2025</span>
-                    <button class="likebutton">👍</button>
+                    <button class="like-button">👍</button>
                 </div>
 
                 <a href="noticia.html">
@@ -80,7 +80,7 @@
             <article class="article-card">
                 <div class="article-header">
                     <span class="data">19 de ago, 2025</span>
-                    <button class="likebutton">👍</button>
+                    <button class="like-button">👍</button>
                 </div>
 
                 <a href="noticia.html">
