--- a/noticia.html
+++ b/noticia.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SENAI</title>
+    <link rel="website icon"  type="png" href="Img/logo_senai-1024x1024-removebg-preview.png">
+
+    <link rel="stylesheet" href="style-noticia.css" />
+
 </head>
 <body>
-    ADO ADO ADO QUEM LEU DEU O RABO
+    <header>
+        <div class="header-contente">
+            <h1> <a href="index.html">SENAI</a></h1>
+            <nav>
+              <ul>
+                <li><a href="noticia.html">Blog</a></li>
+                <li><a href="sobre.html">Quem Somos</a></li>
+              </ul>
+            </nav>
+        </div>
+  
+        <div class="search-bar">
+          <input type="text" placeholder="MANDA PAPAI" />
+          <span class="search-icon">🔍</span>
+        </div>
+    </header>
+
+    <main>
+        <section class="article">
+            <article class="article-card">
+                <div class="article-header">
+                    <h2 class="article-title">Agora é official: o Windows 11 está vindo💻</h2>
+                </div>
+
+                    <div class="news-highlight">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, animi voluptate? Asperiores architecto tempore omnis esse commodi culpa et qui!</p>
+                    </div>
+                
+                    <img src="./Img/baixados.webp" alt="imagem do Windows 11">
+
+                <p2 class="news-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis sit sed quasi eum reprehenderit laudantium. Excepturi, natus recusandae? Explicabo est eaque veritatis minima temporibus, libero dolorem rerum ducimus voluptas, doloremque harum. Cum sequi voluptates veritatis aspernatur cumque voluptatum commodi et tenetur iste molestias numquam minus nobis ad deserunt fugiat, laborum repellendus nemo nam similique nulla. Animi officia rem molestiae quis eos magni voluptate commodi dolor. Neque ipsam deleniti suscipit laborum sed expedita ducimus veritatis atque. Impedit officia iste blanditiis nihil! Laboriosam magni at aspernatur? Natus quaerat, expedita quibusdam unde dolor a distinctio minima sapiente repudiandae in, perferendis rerum iure eius.
+                </p2>
+            </article>
+    </main>
 </body>
 </html>
